feat: further dataloader and model presentation

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -142,11 +142,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Model\n",
+    "We will use a state-of-the-art classifier model: ViT (Vision Transformer), a transformer-based architecture. We will initialize its weights using the publicly available pre-trained weights from Hugging Face and fine-tune the model using our training dataset.\n",
+    "\n",
+    "The images will be resized to 224x224 to match the dimensions used in the original ViT training dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: train_model.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!train_model.py"
+   ]
   },
   {
    "cell_type": "code",
